--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "gulpfile.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp",
+    "build": "gulp build --build"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "gulp-file-include": "^2.3.0",
     "gulp-fonter": "^0.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-if": "^3.0.0",
     "gulp-imagemin": "^9.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^5.0.0",
@@ -29,6 +31,7 @@
     "gulp-webp": "^5.0.0",
     "gulp-webp-html-nosvg": "^1.1.1",
     "gulp-webpcss": "^1.1.1",
+    "gulp-zip": "^6.0.0",
     "sass": "^1.80.6",
     "webp-converter": "^2.2.3",
     "webpack": "^5.96.1",
