--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "type": "module",
   "scripts": {
     "dev": "gulp",
-    "build": "gulp build --build"
+    "build": "gulp build --build",
+    "zip": "gulp deployZip --build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "archiver": "^7.0.1",
     "browser-sync": "^3.0.3",
     "del": "^8.0.0",
     "gulp": "^5.0.0",
